wip: draft landing package
- mockup in index.html and styles in styles.css

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,11 @@
   <title>Battleship</title>
 </head>
 <body>
-  <div>Battleship</div>
+  <div class="main">
+    <div class="landing">
+      <h1 class="heading">battleship</h1>
+      <button>play</button>
+    </div>
+  </div>
 </body>
 </html>
