--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Battleship</title>
-</head>
-<body>
-  <div class="main">
-    <div class="landing">
-      <h1 class="heading">battleship</h1>
-      <button>play</button>
-    </div>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Battleship</title>
+  </head>
+  <body>
+    <div class="main"></div>
+  </body>
 </html>
