wip: layouts for board

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Battleship</title>
   </head>
   <body>
-    <div class="main"></div>
+    <div class="main">
+    </div>
   </body>
 </html>
